:new: (more) decoupled test entities and repositories from each other